tests/ui/parser/misspelled-keywords/impl-trait.stderr
error: expected one of `(`, `+`, `,`, `::`, `<`, `=`, or `>`, found `Debug`
  --> $DIR/impl-trait.rs:1:18
   |
LL | fn code<T: impll Debug>() -> u8 {}
   |                  ^^^^^ expected one of 7 possible tokens
   |
help: you might have meant to end the type parameters here
   |
LL | fn code<T: impll> Debug>() -> u8 {}
   |                 +

error: aborting due to 1 previous error

